--- a/home.html
+++ b/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <title>NothingMuch-A Great Way To Spend Your Time</title>
- <link rel="stylesheet" type="text/css" href="style.css">
- <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
+    <title>NothingMuch-A Great Way To Spend Your Time</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="navbar">
@@ -21,11 +23,14 @@
                 </ul>
             </nav>
         </div>
+        <div class="bg"></div>
+        <div class="bg bg2"></div>
+        <div class="bg bg3"></div>
         <div class="row">
             <div class="col-2">
                 <h1>Having Too Much Of Free Time??<br>Welcome To NothingMuch!!</h1>
-                <p class="intro">A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!
-                </p>
+                <h2 class="intro">A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!
+                    </p>
             </div>
         </div>
     </div>
