--- a/avatar.html
+++ b/avatar.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <title>NothingMuch-A Great Way To Spend Your Time</title>
- <link rel="stylesheet" type="text/css" href="style.css">
- <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
+    <title>NothingMuch-A Great Way To Spend Your Time</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="navbar">
@@ -21,38 +23,41 @@
                 </ul>
             </nav>
         </div>
+        <div class="bg"></div>
+        <div class="bg bg2"></div>
+        <div class="bg bg3"></div>
+        <section>
+            <h1>Generate a Random Avatar From Your Name</h1>
+            <div class="centerDiv">
+                <div class="details">
+                    <label>Enter Your Name</label><br>
+                    <input type="text" name="" id="nameid">
+                </div>
 
-<section>
- <h1>Generate a Random Avatar From Your Name</h1>
- <div class="centerDiv">
-  <div class="details">
-   <label>Enter Your Name</label><br>
-   <input type="text" name="" id="nameid">
-  </div>
+                <div class="imgdiv">
+                    <img src="welcome.jpg" width="200" height="200" class="imgchange">
+                </div>
 
-  <div class="imgdiv">
-   <img src="welcome.jpg" width="200" height="200" class="imgchange">
-  </div>
+                <button> Click Here</button>
 
-  <button> Click Here</button>
-  
- </div>
-</section>
+            </div>
+        </section>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
-<script>
- $(document).ready(function(){
-  $('button').click(function(){
-   const name = $('#nameid').val();
-   $('.imgchange').attr('src',`https://joeschmoe.io/api/v1/${name}`);
-   const b = $('.imgchange');
-   console.log(b);
+        <script>
+            $(document).ready(function () {
+                $('button').click(function () {
+                    const name = $('#nameid').val();
+                    $('.imgchange').attr('src', `https://joeschmoe.io/api/v1/${name}`);
+                    const b = $('.imgchange');
+                    console.log(b);
 
-  });
- });
-</script>
+                });
+            });
+        </script>
 
 </body>
+
 </html>
