--- a/doggo.html
+++ b/doggo.html
@@ -1,107 +1,112 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <title>NothingMuch-A Great Way To Spend Your Time</title>
- <link rel="stylesheet" type="text/css" href="style.css">
- <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
+  <title>NothingMuch-A Great Way To Spend Your Time</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <a href="home.html">NothingMuch</a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="bored.html">Bored?</a></li>
-                    <li><a href="avatar.html">Generate A Random Avatar</a></li>
-                    <li><a href="meme.html">Memes</a></li>
-                    <li><a href="doggo.html">PawFect</a></li>
-                </ul>
-            </nav>
+  <div class="container">
+    <div class="navbar">
+      <div class="logo">
+        <a href="home.html">NothingMuch</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="bored.html">Bored?</a></li>
+          <li><a href="avatar.html">Generate A Random Avatar</a></li>
+          <li><a href="meme.html">Memes</a></li>
+          <li><a href="doggo.html">PawFect</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <section>
+      <div class="app">
+        <div class="header">
+          <h1>``</h1>
+          <h1>Watch A Slideshow of Your Favourite Doggos Here!!</h1>
+          <div id="breed"></div>
         </div>
 
-<section>
-  <div class="app">
-    <div class="header">
-      <h1>Hogwarts</h1>
-      <h1>Watch A Slideshow of Your Favourite Doggos Here!!</h1>
-      <div id="breed"></div>
-    </div>
-    
-    <div class="slideshow" id="slideshow">
-      <h2 class="meme-title">Loading...<br>Please Select A Breed</h2>
-    </div>
-  </div>
-</section>
+        <div class="slideshow" id="slideshow">
+          <h2 class="meme-title">Loading...<br>Please Select A Breed</h2>
+        </div>
+      </div>
+    </section>
 </body>
 <script>
-let timer
-let deleteFirstPhotoDelay
-const memeTitle = document.querySelector(".meme-generator .meme-title");
-async function start() {
-  try {
-    const response = await fetch("https://dog.ceo/api/breeds/list/all")
-    const data = await response.json()
-    createBreedList(data.message)
-  } catch (e) {
-    console.log("There was a problem fetching the breed list.")
-  }
-}
-
-start()
-
-function createBreedList(breedList) {
-  document.getElementById("breed").innerHTML = `
-  <select onchange="loadByBreed(this.value)">
-        <option>Choose a dog breed</option>
-        ${Object.keys(breedList).map(function (breed) {
-          return `<option>${breed}</option>`
-        }).join('')}
-      </select>
-  `
-}
-
-async function loadByBreed(breed) {
-  if (breed != "Choose a dog breed") {
-    const response = await fetch(`https://dog.ceo/api/breed/${breed}/images`)
-    const data = await response.json()
-    createSlideshow(data.message)
-  }
-}
-
-function createSlideshow(images) {
-  let currentPosition = 0
-  clearInterval(timer)
-  clearTimeout(deleteFirstPhotoDelay)
-  
-  if (images.length > 2) {
-    document.getElementById("slideshow").innerHTML = `
-  <div class="slide" style="background-image: url('${images[0]}')"></div>
-  <div class="slide" style="background-image: url('${images[1]}')"></div>
-  `
-  currentPosition += 2
-  if (images.length == 2) currentPosition = 0
-  timer = setInterval(nextSlide, 3000)
-  } else {
-    document.getElementById("slideshow").innerHTML = `
-  <div class="slide" style="background-image: url('${images[0]}')"></div>
-  <div class="slide"></div>
-  `
-  }
-
-  function nextSlide() {
-    document.getElementById("slideshow").insertAdjacentHTML("beforeend", `<div class="slide" style="background-image: url('${images[currentPosition]}')"></div>`)
-    deleteFirstPhotoDelay = setTimeout(function () {
-      document.querySelector(".slide").remove()
-    }, 1000)
-    if (currentPosition + 1 >= images.length) {
-      currentPosition = 0
-    } else {
-      currentPosition++
+  let timer
+  let deleteFirstPhotoDelay
+  const memeTitle = document.querySelector(".meme-generator .meme-title");
+  async function start() {
+    try {
+      const response = await fetch("https://dog.ceo/api/breeds/list/all")
+      const data = await response.json()
+      createBreedList(data.message)
+    } catch (e) {
+      console.log("There was a problem fetching the breed list.")
     }
   }
-} 
+
+  start()
+
+  function createBreedList(breedList) {
+    document.getElementById("breed").innerHTML = `
+<select onchange="loadByBreed(this.value)">
+      <option>Choose a dog breed</option>
+      ${Object.keys(breedList).map(function (breed) {
+      return `<option>${breed}</option>`
+    }).join('')}
+    </select>
+`
+  }
+
+  async function loadByBreed(breed) {
+    if (breed != "Choose a dog breed") {
+      const response = await fetch(`https://dog.ceo/api/breed/${breed}/images`)
+      const data = await response.json()
+      createSlideshow(data.message)
+    }
+  }
+
+  function createSlideshow(images) {
+    let currentPosition = 0
+    clearInterval(timer)
+    clearTimeout(deleteFirstPhotoDelay)
+
+    if (images.length > 2) {
+      document.getElementById("slideshow").innerHTML = `
+<div class="slide" style="background-image: url('${images[0]}')"></div>
+<div class="slide" style="background-image: url('${images[1]}')"></div>
+`
+      currentPosition += 2
+      if (images.length == 2) currentPosition = 0
+      timer = setInterval(nextSlide, 3000)
+    } else {
+      document.getElementById("slideshow").innerHTML = `
+<div class="slide" style="background-image: url('${images[0]}')"></div>
+<div class="slide"></div>
+`
+    }
+
+    function nextSlide() {
+      document.getElementById("slideshow").insertAdjacentHTML("beforeend", `<div class="slide" style="background-image: url('${images[currentPosition]}')"></div>`)
+      deleteFirstPhotoDelay = setTimeout(function () {
+        document.querySelector(".slide").remove()
+      }, 1000)
+      if (currentPosition + 1 >= images.length) {
+        currentPosition = 0
+      } else {
+        currentPosition++
+      }
+    }
+  }
 </script>
+
 </html>
