--- a/doggo.html
+++ b/doggo.html
@@ -4,6 +4,7 @@
 <head>
   <title>NothingMuch-A Great Way To Spend Your Time</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
 </head>
 
@@ -31,7 +32,7 @@
         <div class="header">
           <h1>``</h1>
           <h1>Watch A Slideshow of Your Favourite Doggos Here!!</h1>
-          <div id="breed"></div>
+          <div class="breed"id="breed"></div>
         </div>
 
         <div class="slideshow" id="slideshow">
