--- a/home.html
+++ b/home.html
@@ -10,29 +10,38 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <div class="logo">
-                <a href="home.html">NothingMuch</a>
-            </div>
             <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="bored.html">Bored?</a></li>
-                    <li><a href="avatar.html">Generate A Random Avatar</a></li>
-                    <li><a href="meme.html">Memes</a></li>
-                    <li><a href="doggo.html">PawFect</a></li>
-                </ul>
-            </nav>
+                <input type="checkbox" id="nav" class="hidden">
+                <label for="nav" class="nav-btn">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                </label>
+                <div class="logo">
+                    <a href="home.html">NOTHINGMUCH</a>
+                </div>
+                <div class="nav-wrapper">
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="avatar.html">Generate an Avatar</a></li>
+                        <li><a href="bored.html">Bored?</a></li>
+                        <li><a href="doggo.html">Doggo</a></li>
+                        <li><a href="meme.html">Memes</a></li>
+                    </ul>
+                </div>
         </div>
-        <div class="bg"></div>
-        <div class="bg bg2"></div>
-        <div class="bg bg3"></div>
-        <div class="row">
-            <div class="col-2">
-                <h1>Having Too Much Of Free Time??<br>Welcome To NothingMuch!!</h1>
-                <h2 class="intro">A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!
-                    </p>
-            </div>
+        </nav>
+    </div>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="row">
+        <div class="col-2">
+            <h1>Having Too Much Of Free Time??<br>Welcome To NothingMuch!!</h1>
+            <h2 class="intro">A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!
+                </p>
         </div>
+    </div>
     </div>
 </body>
 
