--- a/avatar.html
+++ b/avatar.html
@@ -4,71 +4,84 @@
 <head>
     <title>NothingMuch-A Great Way To Spend Your Time</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
+    <link
+        href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900'
+        rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="navbar">
-            <div class="logo">
-                <a href="home.html">NothingMuch</a>
-            </div>
             <nav>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="bored.html">Bored?</a></li>
-                    <li><a href="avatar.html">Generate A Random Avatar</a></li>
-                    <li><a href="meme.html">Memes</a></li>
-                    <li><a href="doggo.html">PawFect</a></li>
-                </ul>
+                <input type="checkbox" id="nav" class="hidden">
+                <label for="nav" class="nav-btn">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                </label>
+                <div class="logo">
+                    <a href="home.html">NOTHINGMUCH</a>
+                </div>
+                <div class="nav-wrapper">
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="avatar.html">Generate an Avatar</a></li>
+                        <li><a href="bored.html">Bored?</a></li>
+                        <li><a href="doggo.html">Doggo</a></li>
+                        <li><a href="meme.html">Memes</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
-        <div class="bg"></div>
-        <div class="bg bg2"></div>
-        <div class="bg bg3"></div>
-        <section>
-            <h1>Generate a Random Avatar From Your Name</h1>
-            <div class="centerDiv">
-                <div class="details">
-                    <label>Enter Your Name</label><br>
-                    <input type="text" name="" id="nameid">
-                </div>
-
-                
-                <div class="details">
-                    <label for="gender">Select Your Gender</label><br>
-                    <select name="gender" id="genid">
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                    </select>
-                </div>
-            
-
-                <div class="imgdiv">
-                    <img src="welcome.jpg" width="200" height="200" class="imgchange">
-                </div>
-
-                <button> Click Here</button>
-
+    </div>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <section>
+        <div class="header">
+        <h1>Generate a Random Avatar From Your Name</h1>
+        </div>
+        <div class="centerDiv">
+            <div class="details">
+                <label>Enter Your Name</label><br>
+                <input type="text" name="" id="nameid">
             </div>
-        </section>
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+            <div class="details">
+                <label for="gender">Select Your Gender</label><br>
+                <select name="gender" id="genid">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+            </div>
 
-        <script>
-            $(document).ready(function () {
-                $('button').click(function () {
-                    const name = $('#nameid').val();
-                    const gender=$('#genid').val();
-                    $('.imgchange').attr('src', `https://joeschmoe.io/api/v1/${gender}/${name}`);
-                    const b = $('.imgchange');
-                    console.log(b);
 
-                });
+            <div class="imgdiv">
+                <img src="welcome.jpg" width="200" height="200" class="imgchange">
+            </div>
+
+            <button> Click Here</button>
+
+        </div>
+    </section>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('button').click(function () {
+                const name = $('#nameid').val();
+                const gender = $('#genid').val();
+                $('.imgchange').attr('src', `https://joeschmoe.io/api/v1/${gender}/${name}`);
+                const b = $('.imgchange');
+                console.log(b);
+
             });
-        </script>
+        });
+    </script>
 
 </body>
 
