--- a/meme.html
+++ b/meme.html
@@ -37,6 +37,8 @@
   <div class="bg bg3"></div>
   <section>
     <div class="meme-generator">
+      <h1>‎ </h1>
+      <h1>‎ </h1>
       <button class="generate-meme-btn">Generate Meme</button>
       <h2 class="meme-title">Loading...</h2>
 
@@ -70,7 +72,7 @@
 
     //using async method ngl this looks easier
     async function generateMeme() {
-      const response = await fetch("https://meme-api.herokuapp.com/gimme/wholesomememes")
+      const response = await fetch(" https://meme-api.com/gimme/wholesomememes")
       const data = await response.json()
       updateDetails(data.url, data.title, data.author)
     }
