--- a/meme.html
+++ b/meme.html
@@ -39,7 +39,7 @@
     <div class="meme-generator">
       <h1>‎ </h1>
       <h1>‎ </h1>
-      <button class="generate-meme-btn">Generate Meme</button>
+      <button class="generate-meme-btn">Next<br>Meme</button>
       <h2 class="meme-title">Loading...</h2>
 
       <img src="" alt="" />
