--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <title>NothingMuch-A Great Way To Spend Your Time</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
 </head>
 
 <body>
