--- a/doggo.html
+++ b/doggo.html
@@ -4,10 +4,10 @@
 <head>
   <title>NothingMuch-A Great Way To Spend Your Time</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
   <link
     href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900'
     rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
