--- a/avatar.html
+++ b/avatar.html
@@ -40,7 +40,7 @@
     <div class="bg bg3"></div>
     <section>
         <div class="header">
-            <h1>‎ </h1>
+            <h1 class="transperant">‎ </h1>
             <h1>Generate a Random Avatar From Your Name</h1>
         </div>
         <div class="centerDiv">
