--- a/bored.html
+++ b/bored.html
@@ -37,7 +37,7 @@
   <div class="bg bg3"></div>
   <section>
     <div class="header">
-      <h1>‎ </h1>
+      <h1 class="transperant">‎ </h1>
       <h1>Can't find anything to do??</h1>
       <h1>Click the Button and we will find you Something!!</h1>
     </div>
