--- a/meme.html
+++ b/meme.html
@@ -37,8 +37,8 @@
   <div class="bg bg3"></div>
   <section>
     <div class="meme-generator">
-      <h1>‎ </h1>
-      <h1>‎ </h1>
+      <h1 class="transperant">‎ </h1>
+      <h1 class="transperant">‎ </h1>
       <button class="generate-meme-btn">Next<br>Meme</button>
       <h2 class="meme-title">Loading...</h2>
 
