--- a/doggo.html
+++ b/doggo.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="slideshow" id="slideshow">
-        <h2 class="meme-title">Loading...<br>Please Select A Breed</h2>
+        <h2 class="meme-title">Please Select A Breed<br>Loading...</h2>
       </div>
     </div>
   </section>
