--- a/home.html
+++ b/home.html
@@ -8,6 +8,24 @@
 </head>
 
 <body>
+    <div class="content_new">
+        <h1>Having Too Much Of Free Time??<br>Welcome To NothingMuch!!</h1>
+        <h2>A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!</h2>
+    </div>
+</body>
+
+</html>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>NothingMuch-A Great Way To Spend Your Time</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
+</head>
+
+<body>
     <div class="container">
         <div class="navbar">
             <nav>
@@ -35,12 +53,9 @@
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
-    <div class="row">
-        <div class="col-2">
-            <h1>Having Too Much Of Free Time??<br>Welcome To NothingMuch!!</h1>
-            <h2 class="intro">A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!
-                </p>
-        </div>
+    <div class="content_new">
+        <h1>Having Too Much Of Free Time??<br>Welcome To NothingMuch!!</h1>
+        <h2>A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!</h2>
     </div>
     </div>
 </body>
