--- a/avatar.html
+++ b/avatar.html
@@ -82,7 +82,7 @@
             </div>
 
             <div class="imgdiv">
-                <img src="welcome.jpg" width="200" height="200" class="imgchange">
+                <img src="welcome.jpg" width="200" height="200" class="imgchange" alt="Hello There!! Welcome!!">
             </div>
 
             <button> Click Here</button>
