--- a/doggo.html
+++ b/doggo.html
@@ -47,7 +47,12 @@
       </div>
 
       <div class="slideshow" id="slideshow">
-        <h2 class="meme-title">Please Select A Breed<br>Loading...</h2>
+        <h2 class="meme-title">Please Select A Breed<br>
+          <div class="spinner">
+            <div class="double-bounce1"></div>
+            <div class="double-bounce2"></div>
+          </div>
+        </h2>
       </div>
     </div>
   </section>
