--- a/meme.html
+++ b/meme.html
@@ -40,7 +40,12 @@
       <h1 class="transperant">‎ </h1>
       <h1 class="transperant">‎ </h1>
       <button class="generate-meme-btn">Next<br>Meme</button>
-      <h2 class="meme-title">Loading...</h2>
+      <h2 class="meme-title">
+        <div class="spinner">
+          <div class="double-bounce1"></div>
+          <div class="double-bounce2"></div>
+        </div>
+      </h2>
 
       <img src="" alt="" />
       <div class="meme-author"></div>
