--- a/meme.html
+++ b/meme.html
@@ -25,7 +25,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="meme.html">Memes</a></li>
             <li><a href="bored.html">Bored?</a></li>
-            <li><a href="doggo.html">Doggo</a></li>
+            <li><a href="doggo.html">PawFect</a></li>
             <li><a href="avatar.html">Generate an Avatar</a></li>
           </ul>
         </div>
