--- a/bored.html
+++ b/bored.html
@@ -11,18 +11,19 @@
   <div class="container">
     <div class="navbar">
       <nav>
+        <div class="logo">
+          <a href="index.html">NOTHINGMUCH</a>
+        </div>
         <input type="checkbox" id="nav" class="hidden">
         <label for="nav" class="nav-btn">
           <i></i>
           <i></i>
           <i></i>
         </label>
-        <div class="logo">
-          <a href="home.html">NOTHINGMUCH</a>
-        </div>
+        
         <div class="nav-wrapper">
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="meme.html">Memes</a></li>
             <li><a href="bored.html">Bored?</a></li>
             <li><a href="doggo.html">PawFect</a></li>
