--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <div class="container">
         <div class="navbar">
             <nav>
+                <div class="logo">
+                    <a href="index.html">NOTHINGMUCH</a>
+                </div>
                 <input type="checkbox" id="nav" class="hidden">
                 <label for="nav" class="nav-btn">
                     <i></i>
                     <i></i>
                     <i></i>
                 </label>
-                <div class="logo">
-                    <a href="home.html">NOTHINGMUCH</a>
-                </div>
+                
                 <div class="nav-wrapper">
                     <ul>
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="meme.html">Memes</a></li>
                         <li><a href="bored.html">Bored?</a></li>
                         <li><a href="doggo.html">PawFect</a></li>
@@ -36,7 +37,7 @@
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
     <div class="content_new">
-        <h1>Having Too Much Of Free Time??<br>Welcome To NothingMuch!!</h1>
+        <h1>Having Too Much Of Free Time??<br>Welcome To <span class="NM">NOTHINGMUCH</span>!!</h1>
         <h2>A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!</h2>
     </div>
     </div>
