--- a/doggo.html
+++ b/doggo.html
@@ -2,7 +2,16 @@
 <html>
 
 <head>
-  <title>NothingMuch-A Great Way To Spend Your Time</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8T2H41XRSZ');
+</script>
+  <title>Nothing-Much -A Great Way To Spend Your Time</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
   <link
@@ -15,7 +24,7 @@
     <div class="navbar">
       <nav>
         <div class="logo">
-          <a href="index.html">NOTHINGMUCH</a>
+          <a href="index.html">NOTHING-MUCH</a>
         </div>
         <input type="checkbox" id="nav" class="hidden">
         <label for="nav" class="nav-btn">
@@ -39,10 +48,9 @@
   <div class="bg"></div>
   <div class="bg bg2"></div>
   <div class="bg bg3"></div>
-  <section>
+  <section1>
     <div class="app">
       <div class="header">
-        <h1>``</h1>
         <h1>Watch A Slideshow of<br>Your Favourite Dog Breeds Here!!</h1>
         <div class="breed" id="breed"></div>
       </div>
@@ -56,7 +64,7 @@
         </h2>
       </div>
     </div>
-  </section>
+  </section1>
 </body>
 <script>
   let timer
