--- a/meme.html
+++ b/meme.html
@@ -2,7 +2,16 @@
 <html>
 
 <head>
-  <title>NothingMuch-A Great Way To Spend Your Time</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8T2H41XRSZ');
+</script>
+  <title>Nothing-Much -A Great Way To Spend Your Time</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
 </head>
@@ -12,7 +21,7 @@
     <div class="navbar">
       <nav>
         <div class="logo">
-          <a href="index.html">NOTHINGMUCH</a>
+          <a href="index.html">NOTHING-MUCH</a>
         </div>
         <input type="checkbox" id="nav" class="hidden">
         <label for="nav" class="nav-btn">
@@ -38,7 +47,6 @@
   <div class="bg bg3"></div>
   <section>
     <div class="meme-generator">
-      <h1 class="transperant">‎ </h1>
       <div class="header">
         <h1>Watch Your Favourite Memes Here!!</h1>
       </div>
