--- a/avatar.html
+++ b/avatar.html
@@ -2,7 +2,16 @@
 <html>
 
 <head>
-    <title>NothingMuch-A Great Way To Spend Your Time</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8T2H41XRSZ');
+</script>
+    <title>Nothing-Much -A Great Way To Spend Your Time</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&" rel="stylesheet">
     <link
@@ -15,7 +24,7 @@
         <div class="navbar">
             <nav>
                 <div class="logo">
-                    <a href="index.html">NOTHINGMUCH</a>
+                    <a href="index.html">NOTHING-MUCH</a>
                 </div>
                 <input type="checkbox" id="nav" class="hidden">
                 <label for="nav" class="nav-btn">
@@ -41,7 +50,6 @@
     <div class="bg bg3"></div>
     <section>
         <div class="header">
-            <h1 class="transperant">‎ </h1>
             <h1>Generate a Random Avatar From Your Name</h1>
         </div>
         <div class="centerDiv">
