--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html>
 
 <head>
-    <title>NothingMuch-A Great Way To Spend Your Time</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8T2H41XRSZ');
+</script>
+    <title>Nothing-Much -A Great Way To Spend Your Time</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
 </head>
@@ -12,7 +21,7 @@
         <div class="navbar">
             <nav>
                 <div class="logo">
-                    <a href="index.html">NOTHINGMUCH</a>
+                    <a href="index.html">NOTHING-MUCH</a>
                 </div>
                 <input type="checkbox" id="nav" class="hidden">
                 <label for="nav" class="nav-btn">
@@ -37,7 +46,7 @@
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
     <div class="content_new">
-        <h1>Having Too Much Of Free Time??<br>Welcome To <span class="NM">NOTHINGMUCH</span>!!</h1>
+        <h1>Having Too Much Of Free Time??<br>Welcome To <span class="NM">NOTHING-MUCH</span>!!</h1>
         <h2>A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!</h2>
     </div>
     </div>
