--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-8T2H41XRSZ');
-</script>
-    <title>Nothing-Much -A Great Way To Spend Your Time</title>
+        gtag('config', 'G-8T2H41XRSZ');
+    </script>
+    <title>Nothing-Much - A Great Way To Spend Your Time</title>
+    <link rel="website icon" type="png" href="nothing.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
 </head>
@@ -29,7 +30,7 @@
                     <i></i>
                     <i></i>
                 </label>
-                
+
                 <div class="nav-wrapper">
                     <ul>
                         <li><a href="index.html">Home</a></li>
