--- a/bored.html
+++ b/bored.html
@@ -3,16 +3,17 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-8T2H41XRSZ');
-</script>
-  <title>Nothing-Much -A Great Way To Spend Your Time</title>
+    gtag('config', 'G-8T2H41XRSZ');
+  </script>
+  <title>Nothing-Much - Bored? Find an activity</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="website icon" type="png" href="nothing.png">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
 </head>
 
@@ -29,7 +30,7 @@
           <i></i>
           <i></i>
         </label>
-        
+
         <div class="nav-wrapper">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -60,7 +61,7 @@
           <input type="checkbox" name="free" id="free">
           <label for="free">I'm Broke</label><br>
 
-          <button> Click Here</button>
+          <button id="button">CLICK HERE</button>
 
       </div>
   </section>
