--- a/doggo.html
+++ b/doggo.html
@@ -3,16 +3,17 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-8T2H41XRSZ');
-</script>
-  <title>Nothing-Much -A Great Way To Spend Your Time</title>
+    gtag('config', 'G-8T2H41XRSZ');
+  </script>
+  <title>Nothing-Much - Watch your Favourite Doggos</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="website icon" type="png" href="nothing.png">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
   <link
     href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900'
@@ -32,7 +33,7 @@
           <i></i>
           <i></i>
         </label>
-        
+
         <div class="nav-wrapper">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -48,7 +49,7 @@
   <div class="bg"></div>
   <div class="bg bg2"></div>
   <div class="bg bg3"></div>
-  <section1>
+  <div class="section1">
     <div class="app">
       <div class="header">
         <h1>Watch A Slideshow of<br>Your Favourite Dog Breeds Here!!</h1>
@@ -56,7 +57,7 @@
       </div>
 
       <div class="slideshow" id="slideshow">
-        <h2 class="meme-title">
+        <h2 class="dog-title">
           <div class="spinner">
             <div class="double-bounce1"></div>
             <div class="double-bounce2"></div>
@@ -64,7 +65,7 @@
         </h2>
       </div>
     </div>
-  </section1>
+  </div>
 </body>
 <script>
   let timer
