--- a/meme.html
+++ b/meme.html
@@ -3,16 +3,17 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8T2H41XRSZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-8T2H41XRSZ');
-</script>
-  <title>Nothing-Much -A Great Way To Spend Your Time</title>
+    gtag('config', 'G-8T2H41XRSZ');
+  </script>
+  <title>Nothing-Much - Watch Your Favourite Memes</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="website icon" type="png" href="nothing.png">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
 </head>
 
@@ -29,7 +30,7 @@
           <i></i>
           <i></i>
         </label>
-        
+
         <div class="nav-wrapper">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -45,23 +46,22 @@
   <div class="bg"></div>
   <div class="bg bg2"></div>
   <div class="bg bg3"></div>
-  <section>
+  <div class="section1">
     <div class="meme-generator">
       <div class="header">
         <h1>Watch Your Favourite Memes Here!!</h1>
       </div>
-      <button class="generate-meme-btn">Next<br>Meme</button>
       <h2 class="meme-title">
         <div class="spinner">
           <div class="double-bounce1"></div>
           <div class="double-bounce2"></div>
         </div>
       </h2>
-
       <img src="" alt="" />
       <div class="meme-author"></div>
+      <button class="generate-meme-btn">NEXT<br>MEME</button>
     </div>
-  </section>
+  </div>
 
 
   <script>
@@ -88,7 +88,7 @@
 
     //using async method ngl this looks easier
     async function generateMeme() {
-      const response = await fetch(" https://meme-api.com/gimme/wholesomememes")
+      const response = await fetch("https://meme-api.com/gimme/wholesomememes")
       const data = await response.json()
       updateDetails(data.url, data.title, data.author)
     }
