--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     <i></i>
                     <i></i>
                 </label>
-
                 <div class="nav-wrapper">
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -43,14 +42,22 @@
         </div>
         </nav>
     </div>
-    <div class="bg"></div>
-    <div class="bg bg2"></div>
-    <div class="bg bg3"></div>
     <div class="content_new">
-        <h1>Having Too Much Of Free Time??<br>Welcome To <span class="NM">NOTHING-MUCH</span>!!</h1>
+        <h1>Having Too Much Of Free Time??<br>Welcome To <br><span class="NM">NOTHING-MUCH</span></h1>
         <h2>A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!</h2>
     </div>
     </div>
+    </div>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script>
+        $(function () {
+            $('a').each(function () {
+                if ($(this).prop('href') == window.location.href) {
+                    $(this).addClass('active'); $(this).parents('li').addClass('active');
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
