--- a/meme.html
+++ b/meme.html
@@ -30,7 +30,6 @@
           <i></i>
           <i></i>
         </label>
-
         <div class="nav-wrapper">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -43,9 +42,6 @@
       </nav>
     </div>
   </div>
-  <div class="bg"></div>
-  <div class="bg bg2"></div>
-  <div class="bg bg3"></div>
   <div class="section1">
     <div class="meme-generator">
       <div class="header">
@@ -62,8 +58,6 @@
       <button class="generate-meme-btn">NEXT<br>MEME</button>
     </div>
   </div>
-
-
   <script>
     const generateMemeBtn = document.querySelector(
       ".meme-generator .generate-meme-btn"
@@ -71,34 +65,29 @@
     const memeImage = document.querySelector(".meme-generator img");
     const memeTitle = document.querySelector(".meme-generator .meme-title");
     const memeAuthor = document.querySelector(".meme-generator .meme-author");
-
     const updateDetails = (url, title, author) => {
       memeImage.setAttribute("src", url);
       memeTitle.innerHTML = title;
       memeAuthor.innerHTML = `Meme by: ${author}`;
     };
-    //using fetch method
-    // const generateMeme = () => {
-    // fetch("https://meme-api.herokuapp.com/gimme/wholesomememes")
-    // .then((response) => response.json())
-    //.then((data) => {
-    //updateDetails(data.url, data.title, data.author);
-    //});
-    //};
-
-    //using async method ngl this looks easier
     async function generateMeme() {
       const response = await fetch("https://meme-api.com/gimme/wholesomememes")
       const data = await response.json()
       updateDetails(data.url, data.title, data.author)
     }
-
     generateMemeBtn.addEventListener("click", generateMeme);
-
     generateMeme();
   </script>
-
-
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script>
+    $(function () {
+      $('a').each(function () {
+        if ($(this).prop('href') == window.location.href) {
+          $(this).addClass('active'); $(this).parents('li').addClass('active');
+        }
+      });
+    });
+  </script>
 </body>
 
 </html>
