Mobile Supported Version

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         gtag('config', 'G-8T2H41XRSZ');
     </script>
     <title>Nothing-Much - A Great Way To Spend Your Time</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css/">
     <link rel="website icon" type="png" href="nothing.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
@@ -43,7 +45,8 @@
         </nav>
     </div>
     <div class="content_new">
-        <h1>Having Too Much Of Free Time??<br>Welcome To <br><span class="NM">NOTHING-MUCH</span></h1>
+        <h1>Having Too Much Of Free Time??<br>Welcome To <br></h1>
+        <div class="NM">NOTHING-MUCH</div>
         <h2>A Place Where Doing Nothing Is Actually One Of The Best Things You Can Do!!</h2>
     </div>
     </div>
