--- a/avatar.html
+++ b/avatar.html
@@ -14,6 +14,8 @@
     <title>Nothing-Much - Generate Avatar from your name</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="website icon" type="png" href="nothing.png">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css/">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200&" rel="stylesheet">
     <link
         href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900'
