--- a/bored.html
+++ b/bored.html
@@ -12,6 +12,8 @@
     gtag('config', 'G-8T2H41XRSZ');
   </script>
   <title>Nothing-Much - Bored? Find an activity</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css/">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="website icon" type="png" href="nothing.png">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200" rel="stylesheet">
